--- a/assets/ccs/style.css
+++ b/assets/ccs/style.css
@@ -6,7 +6,7 @@
 
 }
 
-.container{
+.grilla{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto auto auto 60px;
@@ -14,9 +14,10 @@
                          "header header header header"
                          "main main main main"
                          "footer footer footer footer" ;
-
-
 }
+
+
+
 
 
 
@@ -458,6 +459,9 @@
     background-color: rgb(237, 236, 203);
 
 
+}
+.Productos2 h2{
+    margin: 0%;
 }
 
 
@@ -1108,6 +1112,7 @@
     font-size: 30px;
     color:rgb(78, 0, 114) ;
     padding: 5%;
+    margin: 0%;
     
 
 }
@@ -1117,6 +1122,7 @@
     font-size: 30px;
     color:rgb(78, 0, 114) ;
     padding: 5%;
+    margin: 0%;
     
 }
 
@@ -1125,6 +1131,7 @@
     font-size: 15px;
     color:black;
     padding: 5%;
+    margin:0%;
 
 }
 
@@ -1133,6 +1140,8 @@
     font-size: 15px;
     color:black;
     padding: 5%;
+    margin:0%;
+
 
 }
 
@@ -1160,6 +1169,9 @@
     background-color: rgb(237, 236, 203);
 
 
+}
+.Productos2 h2{
+    margin: 0%;
 }
 
 
