--- a/assets/ccs/style.css
+++ b/assets/ccs/style.css
@@ -682,7 +682,7 @@
 
 
 
-    .container{
+    .grilla{
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: auto auto auto 60px;
